# dt51

./: FunctionHeader.txt.c  Makefile.am  NewHeaderFile.txt.h  NewSourceFile.txt.c  README.md  bootstrap  configure.ac
DAPI/: FonixTTSDTSimple.c  coop.h  crypt2.c  decstd97.c  epsonapi.c  epsonapi.h  init.c  setltslanguage.h  simpleapi.c  simpleapi.h  tts.h  ttsapi.c
DAPI/vb/: dectalkvb.c  dectalkvb.h
Docs/: DecTalk 5.x Functional Spec.doc  Dectalk debug codes.txt  FormantFrequencies.xls  PHEdit notes_Low vs. High Comp.doc
Docs/.svn/: dir-wcprops  entries
Docs/Chinese/: Chinese Text Normalization.doc  DECTalk 5.1 Chinese Focus List.doc  RevisionHistory.ch.txt  TTS Language Development Process.doc
Docs/English/: DECTalk 5.1 USEnglish Focus List.doc  RevisionHistory.us.txt
Docs/Japanese/: CasioItems.xls  Format of the Onsei Japanese dictionaries.doc  Format of the Onsei Japanese dictionaries2.doc  Hiragana and Kanji is not matching.doc  RevisionHistory.jp.txt  header.txt  jp.unicode_3.txt  test.txt
Docs/Korean/: CASIO_KOREANCH.xls  Interlanguage Phonology of Korean Learners of English.htm  Korean Intonation_correspondance_Sun-Ah.doc  Korean symbols_Pascii_IPA_Fonixbet_Arpabet.xls  KoreanCheck_report060606-5_feedback from Sun_Ah.xls  Korean_test_sentences-sj.xls
Parsers/sequencegrammar/: bachusseq.h  binsearch.c  builder.c  sequencegrammar.opt  sgrammar.output  sgrammar_tab.c  sgrammar_tab.h  sorttrie.c  sorttrie.h  sorttrieparse.c  wherelex.c
Test/Casio/: NGsentence.xls
Test/Chinese/: BasicSounds.txt  Chinese.test.txt  Tone Sequence in Sentence.doc  character_pinyin_tone.txt
Test/English/: Minimal Pairs.txt  demo.uk.txt
Test/Italian/: IT_IntonationTestPhrases.xls
Test/Japanese/: Copy of jp.unicode.txt  JapaneseTranslation.xls  jp.unicode.txt  jp.unicode2.txt  ~$jp.unicode.txt
Test/Korean/: Korean.test.txt  KrTestPhrases.xls  KrTextNormalizationTests.xls
Test/Spanish/: SP_TestPhrase_Hiatus.xls
dapicore/CMD/: c_us_cde.h  cm_char.c  cm_data.h  cm_defs.h  cm_main.c  cm_util.h  cmd_init.c  cmdmain.h  par_comp.c  par_def.h  par_def1.h  par_dict.c  par_pars1.c  par_rule2.par  par_rule2b.h
dapicore/INCLUDE/: 186.h  bachus.h  bachusfeatures.h  bachusi.h  ch_def.h  dectalk.h  defs.h  dt_abort.h  fr_phon.tab  ger_phon.tab  hb_err.tab  hb_phon.tab  hb_type.tab  it_err.tab  it_phon.tab  jap_phon.h  jp_def.h  jp_err.tab  jp_phon.tab  kernel.h  l_all_ph.h  l_com_ph.h  la_phon.tab  minpath.h  phonlist.h  portd.h  replacerules.h  ruleparse.h  spa_phon.tab  spa_type.tab  tsr.h  uk_phon.tab  usa_phon.tab  usa_type.tab
dapicore/KERNEL/: Usa_init.c  isa.c  main.c  services.c  spc_driv.c  usa.c
dapicore/LTS/: FnxLtsRulesEngine.h  execrules.c  extracode.c  l_ac_con.c  l_ch_ad1.c  l_ch_ru1.c  l_fr_ru1.c  l_gr_ad1.c  l_gr_con.c  l_gr_ma1.c  l_gr_ru1.c  l_hb_ad1.c  l_it_con.c  l_it_pr1.c  l_jp_ru1-1786.c  l_jp_ru1.c  l_jp_sp1.c  l_kr_pr1.c  l_kr_ru1.c  l_la_ma1.c  l_la_pr1.c  l_la_ru1.c  l_sp_ad1.c  l_sp_ma1.c  l_sp_sp1.c  l_uk_ad1.c  l_uk_con.c  l_uk_ma1.c  l_uk_pr1.c  l_us_ad1.c  l_us_cha.c  loaddict.c  ls_cons.h  ls_consi.c  ls_defs.h  ls_dict.h  ls_homo.h  ls_math.c  ls_proc.c  ls_prot.h  (+25 more)
dapicore/PH/: 88.bat  LDOIT.BAT  Makefile.in  Ph_drwt02.c  Ph_inton2.c  SDOIT.BAT  UDOIT.BAT  ali.bat  ali_fem.phd  build_jp.bat  build_kr.bat  chin.bat  ed.bat  gr_mal.phd  heb.bat  index.html  it.bat  it_mal.phd  kr.bat  kr_fem.phd  p_all_ph.h  p_ch_sr1.c  p_ch_sy1.c  p_ch_vdf_tuneint.h  p_fr_rom.h  p_fr_sr1.c  p_fr_st1.c  p_fr_tim.c  p_fr_vdf_tunehl.h  p_fr_vdf_tuneint_casio.h  p_gr_st1.c  p_gr_vdf_tunehl.h  p_gr_vdf_tuneint.h  p_hb_rom.h  p_he_st1.c  p_he_sy1.c  p_it_rom.h  p_it_sr1.c  p_it_st1.c  p_it_sy1.c  (+58 more)
dapicore/PH_464/: 88_mal.phd  P_us_vdf1.h  Ph_drwt02.c  Ph_drwt02it.c  Ph_fr_inton2.c  Ph_inton2it.c  it.bat  la_mal.phd  p_all_ph.h  p_fr_rom.h  p_fr_st1.c  p_gr_rom.h  p_gr_tim.c  p_gr_vdf_tunehl.h  p_it_rom.h  p_it_sr1.c  p_it_st1.c  p_it_tim.c  p_it_vdf_tuneint.h  p_la_tim.c  p_sp_sr1.c  p_sp_st1.c  p_sp_vdf_tuneint.h  p_uk_st1.c  p_uk_vdf_tunehl.h  p_us_rom.h  p_us_sr1.c  p_us_st1.c  p_us_tim.c  p_us_vdf_tunehl.h  p_us_vdf_tuneint.h  ph_claus.c  ph_data.h  ph_def.h  ph_defs.h  ph_draw_464.c  ph_inton1.c  ph_main.c  ph_prot.h  ph_romi.c  (+8 more)
dapicore/VTM/: decvoc_f.c  playtone.c  tunecheck.h  viphdefs.h  vtm1.c  vtm3.c  vtm_f.c  vtm_fa.c  vtmfunc.h  vtminst.h  vtmiont.c
dapicore/VTM_464/: decvoc_f.c  tunecheck.h  vtm_f.c  vtm_fa.c  vtminst.h
dapicore/hlsyn/: circuit.c  diffuse.c  hlframe.c  hlsyn.h  log10table.c  sqrttable.c
dic/: build_all_dictinmem.bat  build_fr_dictinmem.bat  build_la_dictinmem.bat  build_sp_dictinmem.bat  builddictools.bat  dtalk_fr_compress.dic  dtalk_gr_compress.dic  dtalk_la_compress.dic  dtalk_sp_compress.dic  dtalk_uk_compress.dic  dtalk_us_compress.dic  maindict_la_compress.h  onsei 5-18-2006.dic
dic/.svn/: dir-wcprops  entries
dic/BuildFileSystemDic/: BuildFileSystemDic.c  ReadGermanDict.c  ReadItalianDict.c
dic/BuildFileSystemTables/: BuildFileSystemTables.bat  BuildFileSystemTables.c  dectalk.list
dic/Chinese/: BuildCJK2PinyinTables.bat  CJK.txt  Mandarin.WordFrequencyList.txt  char2pinyin.txt  dtalk_ch.cjk  readme.txt
dic/French/: Build_fr_dic.bat
dic/German/: bachusi.h  experiment.ger  particular.pho
dic/Italian/: README  foreign.pho  monosyll.pho  obviousdiphthongs.pho  rulefixes.pho
dic/Japanese/: Japanese Pronunciation Dictionary CD ROM.url
dic/Korean/: BuildKrRules.bat  DIC_KR.xls  KoreanHanjaReadings.utxt  korean.pdc
dic/Spanish/: BuildSpLaRules.bat  Build_sp_dic.bat  DIC_SP.txt  Latin.rules  dtalk_la.dic  dtalk_sp.dic  invalid.txt
dic/UKEnglish/: Build_uk_dic.bat
dic/USEnglish/: Build_US_Casio_dic.bat  Dic_us_Casio.txt  Dic_us_asr.txt  dic_asr.dic  dic_test.txt  dic_us_data.txt  dic_us_header.txt  dic_us_sorted.txt  dtalk_us_Casio.dic  invalid.txt  pn.txt  pnn.txt  pnn_nn.txt  prepo.txt
nvda/: manifest.ini
nvda/synthDrivers/: dectalk51.py
plat/ARM7TDMI/: epson_release.bat
plat/autotools/: cmd.mk  dectalk.mk  dtalk_de_DE.mk  dtalk_en_GB.mk  dtalk_en_US.mk  dtalk_es_ES.mk  dtalk_es_LA.mk  dtalk_fr_FR.mk  (+5 more)
(+4778 files in other folders)
